--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.1.1
 asgiref==3.6.0
 async-timeout==4.0.2
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.2
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.12.7
@@ -26,6 +27,7 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
+lxml==4.9.2
 MarkupSafe==2.1.1
 packaging==23.0
 Pillow==9.4.0
@@ -40,9 +42,9 @@ ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 serializers==0.2.4
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.3
 uritemplate==4.1.1
 urllib3==1.26.14
 vine==5.0.0
 wcwidth==0.2.6
-
