--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,8 @@ __pypackages__/
 # Celery stuff
 celerybeat-schedule
 celerybeat.pid
+celerybeat-schedule.db
+dump.rdb
 
 # SageMath parsed files
 *.sage.py
