--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ beautifulsoup4==4.11.2
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.12.7
+cffi==1.15.1
 chardet==3.0.4
 charset-normalizer==3.0.1
 click==8.1.3
@@ -14,35 +15,46 @@ click-plugins==1.1.1
 click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
+crispy-bootstrap5==0.7
+cryptography==39.0.1
+defusedxml==0.7.1
 Django==4.1.5
+django-allauth==0.52.0
 django-ckeditor==6.5.1
 django-cors-headers==3.13.0
+django-crispy-forms==2.0
 django-filter==22.1
 django-js-asset==2.0.0
+django-sslserver==0.22
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.4
 future==0.18.3
 idna==3.4
 inflection==0.5.1
+install==1.3.5
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
 lxml==4.9.2
 MarkupSafe==2.1.1
+oauthlib==3.2.2
 packaging==23.0
 pendulum==2.0.5
 Pillow==9.4.0
 prompt-toolkit==3.0.36
 psycopg2-binary==2.9.5
+pycparser==2.21
 PyJWT==2.6.0
 pyTelegramBotAPI==4.10.0
 python-dateutil==2.8.1
 python-decouple==3.7
+python3-openid==3.2.0
 pytz==2022.7.1
 pytzdata==2019.3
 redis==4.4.2
 requests==2.28.2
+requests-oauthlib==1.3.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 serializers==0.2.4
@@ -54,4 +66,3 @@ uritemplate==4.1.1
 urllib3==1.26.14
 vine==5.0.0
 wcwidth==0.2.6
-django-allauth
